src/styles/components/_casestudy-featured.scss
.homepage__casestudies-featured {
  padding: 0 6.4vw 14.4vw 6.4vw;
  background-color: $black;
  color: $white;
  position: relative;
  z-index: 2;
}

.casestudy-featured {
  position: relative;
  padding-top: 14.4vw;
  color: $white;
  &.--white {
    color: $black;
  }
  p {
    @include label(inherit);
  }
  .casestudy-featured__hero {
    width: 100%;
  }
}

.casestudy-featured__info {
  position: absolute;
  left: 24px;
  bottom: 24px;
}

@include media-min($ipad) {
  .homepage__casestudies-featured {
    padding: 7vw 6.4vw;
  }
  .casestudy-featured--grid {
    padding-top: 0;
    display: grid;
    grid-row-gap: 7vw;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: auto;
    grid-column-gap: 6.4vw;
    .casestudy-featured {
      padding: 0;
    }
  }
}
 
@include media-min($ipad-pro) {
  .homepage__casestudies-featured {
    padding: 10vw 10vw;
  }
  .casestudy-featured--grid {
    grid-column-gap: 10vw;
  }
  .grid--wide {
    grid-column: 1 / span 2; 
 } 
}

@include media-min($desktop) {
  .casestudy-featured {
    &.--white {
      color:$black;
      background-color: $white;
    }
  }
  .casestudy-featured__title {
    position: relative;
  }
  .casestudy-featured__hero {
    width: 100%;
    @include prefixer(transition, opacity 200ms cubic-bezier(.26, 0, .34, 1), true ,false ,false );
    transition: opacity 200ms cubic-bezier(.26, 0, .34, 1);
  }
  .casestudy-featured__hero:hover {
    opacity: .4;
    @include prefixer(transition, opacity 200ms cubic-bezier(.26, 0, .34, 1), true ,false ,false );
    transition: opacity 200ms cubic-bezier(.26, 0, .34, 1);
  }
  .casestudy-featured__info {
    @include prefixer(transform, translateZ(0), true, true, false);
    transform: translateZ(0);
    position: absolute;
    left: 24px;
    bottom: 24px;
    pointer-events: none;
  }
}

@include media-min(1680px) {
  .homepage__casestudies-featured {
    padding: 10vw 14vw;
  }
}

